adding files for azure-devops-pipelines

--- a/pipelines/jobs/terraform/plan.yml
+++ b/pipelines/jobs/terraform/plan.yml
@@ -5,7 +5,7 @@ parameters:
 jobs:
   - job: plan_terraform
     displayName: Create Terraform plan
-    pool: azure_devops_terraform_aci
+    pool: terraform_aci_laptop
     steps:
       - template: ../../steps/terraform/install.yml
 
