Removing plan piped output and archive steps

--- a/pipelines/jobs/terraform/plan.yml
+++ b/pipelines/jobs/terraform/plan.yml
@@ -14,10 +14,8 @@ jobs:
 
       - bash: |
           $TERRAFORM_BINARY plan \
-            -out=${{ parameters.workspace }}.tfplan \
             -input=false \
-            -detailed-exitcode \
-            -no-color 
+            -detailed-exitcode 
         displayName: Create Terraform plan
         workingDirectory: "$(Build.SourcesDirectory)/terraform"
         env:
