--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,13 +17,12 @@ stages:
           parameters:
               workspace: dev
     
-  #- stage: apply_dev
-  #  displayName: Apply for development
-  #  variables:
-  #      - group: shared
+  - stage: apply_dev
+    displayName: Apply for development
+    variables:
+        - group: shared
     
-  #  jobs:
-  #      - template: pipelines/jobs/terraform/apply.yml
-  #        parameters:
-  #            project: ${{ variables.project }}
-  #            workspace: dev
+    jobs:
+        - template: pipelines/jobs/terraform/apply.yml
+          parameters:
+              workspace: dev
