--- a/pipelines/jobs/terraform/apply.yml
+++ b/pipelines/jobs/terraform/apply.yml
@@ -13,10 +13,10 @@ jobs:
           steps:
             - template: ../../steps/terraform/install.yml
             - template: ../../steps/terraform/init.yml
-            
+
             - bash: |
                 $TERRAFORM_BINARY apply \
                   -input=false \
                   -auto-approve 
               displayName: Apply Terraform plan
-              workingDirectory: $(Pipeline.Workspace)/terraform
+              workingDirectory: "$(Build.SourcesDirectory)/terraform"
